--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,7 @@ PORT = 5000
 DB_URI = "mongodb://localhost:27017"
 JWT_ACCESS_SECRET_KEY = "sxcdfvgb"
 JWT_REFRESH_SECRET_KEY = "sxcdfvgb"
+SMTP_HOST = "smtp.gmail.com"
+SMTP_PORT = 587
+SMTP_USER = sokratspilber@gmail.com
+SMTP_PASSWORD = Sokrat_1999
