--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,5 @@ JWT_REFRESH_SECRET_KEY = "sxcdfvgb"
 SMTP_HOST = "smtp.gmail.com"
 SMTP_PORT = 587
 SMTP_USER = sokratspilber@gmail.com
-SMTP_PASSWORD = Sokrat_1999
+SMTP_PASSWORD = dkztlgzufpjfospy
+API_URL = http://localhost:5000 
