--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
